force-app/main/default/objects/ProviderCredential__mdt/ProviderCredential__mdt.object-meta.xml
<CustomObject>
    <description>Holds provider configuration such as API keys, regions, and cost tiers (as protected custom metadata).</description>
    <label>Provider Credential</label>
    <pluralLabel>Provider Credentials</pluralLabel>
</CustomObject>