force-app/main/default/objects/ProviderCredential__mdt/fields/APIKeyRef__c.field-meta.xml
<CustomField>
    <fullName>APIKeyRef__c</fullName>
    <description>Reference to a Named Credential or key alias (do not store secrets directly).</description>
    <label>API Key Ref</label>
    <length>128</length>
    <type>Text</type>
</CustomField>