force-app/main/default/objects/ProviderCredential__mdt/fields/BaseUrl__c.field-meta.xml
<CustomField>
    <fullName>BaseUrl__c</fullName>
    <description>Base API URL or endpoint identifier.</description>
    <label>Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>