force-app/main/default/objects/ProviderCredential__mdt/fields/CostTier__c.field-meta.xml
<CustomField>
    <fullName>CostTier__c</fullName>
    <description>Relative cost tier to support routing decisions.</description>
    <label>Cost Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>