force-app/main/default/objects/ProviderCredential__mdt/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Preferred hosting/processing region for this provider.</description>
    <label>Region</label>
    <length>64</length>
    <type>Text</type>
</CustomField>